# mini_projects

./: .gitignore
glog_test/: CMakeLists.txt  main.cpp
posegraph_2d_ceres/: CMakeLists.txt  main.cpp  posegraph_2d_ceres.kdev4  types.h
posegraph_2d_ceres/.kdev4/: posegraph_2d_ceres.kdev4
posegraph_2d_ceres/constraint/: constraint_build.cpp  constraint_build.h
posegraph_2d_ceres/keyframe/: keyframe.h
posegraph_2d_ceres/optimization/: angle_local_parameterization.h  normalize_angle.h  pose_graph_2d.cc  pose_graph_2d.h  pose_graph_2d_error_term.h  stream_info.cpp  stream_info.h
